Renaming react-es6-snippets to basic-react-snippets

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-es6-snippets",
+  "name": "basic-react-snippets",
   "version": "0.5.0",
   "description": "React ES6 snippets for atom",
   "keywords": [
